# blackjack-cardcounting-cv

./: .gitignore  Dockerfile  README  README.md  common.cpp  dealer.cpp  dealer.h  params.h  player.cpp  requirements.txt  shoe.cpp  shoe.h
analysis/: analysis.py
compute_device/: CMakeLists.txt  NOTES.md  README.md  dealer.cpp  main.cpp  matrix.cpp  player.cpp  shoe.cpp  strategy.cpp
data-augmentation/: .env  .gitignore  LICENSE (image-transformer).md  (+13 more)
simulator/: CMakeLists.txt  Dockerfile  Makefile  NOTES.md  README.md  analysis.cpp  analysis.h  analysis.py  common.cpp  common.h  dealer.cpp  dealer.h  main.cpp  matrix.cpp  matrix.h  params.h  player.cpp  player.h  run.sh  shoe.cpp  shoe.h  simulator  strategy.cpp  strategy.h
simulator/matrix/: 1.0_15.txt  1.0_18.txt  1.0_20.txt  1.0_21.txt  1.0_24.txt  1.0_25.txt  1.0_30.txt  1.5_15.txt  1.5_18 2.txt  1.5_20.txt  1.5_21 2.txt  1.5_24 2.txt  1.5_25.txt  1.5_27.txt  2.0_15.txt  2.0_18.txt  2.0_20.txt  2.0_21 2.txt  2.0_24.txt  2.0_25.txt  2.0_27.txt  2.0_30.txt  2.0_36 2.txt  2.5_15.txt  2.5_18 2.txt  2.5_20.txt  2.5_21 2.txt  2.5_24.txt  2.5_25.txt  2.5_27.txt  2.5_30.txt  2.5_60.txt  3.0_15.txt  3.0_18.txt  3.0_20.txt  3.0_21 2.txt  3.0_24.txt  3.0_25.txt  3.0_27 2.txt  3.0_30.txt  (+37 more)
simulator/results/: angles_at_height_1.0.csv  angles_at_height_1.5.csv  angles_at_height_2.0.csv  angles_at_height_2.5.csv  angles_at_height_3.0.csv  angles_at_height_3.5.csv  angles_at_height_4.0.csv  angles_at_height_4.5.csv  angles_at_height_5.0.csv  epstest.csv
simulator/simulator.dSYM/Contents/Resources/DWARF/: simulator
(+39 files in other folders)
